angular, firebase, express hooked up

--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
         "jade": "~0.31.2",
         "consolidate": "~0.9.1",
         "swig": "~1.1.0",
+        "reload": "~0.1.0",
         "ejs": "~0.8.4"
     }
 }
