tests added for agents

--- a/espio/Makefile
+++ b/espio/Makefile
@@ -1,9 +1,12 @@
 
-build:
+build: lib setup.py
 	./setup.py build
 
 install:
 	./setup.py install
+
+test:
+	nosetests -v
 
 develop: install
 	./setup.py develop
